--- a/vignettes/Using the plantTracker 'trackSpp()' function.Rmd
+++ b/vignettes/Using the plantTracker 'trackSpp()' function.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "The plantTracker 'trackSpp()' function"
+title: "Using the plantTracker 'trackSpp()' function"
 author: "Alice Stears"
 date: 29 September 2021
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{The_plantTracker_trackSpp_function}
+  %\VignetteIndexEntry{Using the plantTracker 'trackSpp()' function}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -24,15 +24,15 @@ knitr::opts_chunk$set(
 library(PlantTracker)
 library(ggplot2)
 library(sf)
-# library(devtools)
-# load_all()
+library(devtools)
+load_all()
 ```
 
 ## Introduction
 
-This vignette dives into the `trackSpp()` function, the main 'workhorse'
-function in the plantTracker R package. `trackSpp()` transforms a data set
-of annual maps of plant occurrence into a demographic data set. To
+This vignette gives detailed information about the `trackSpp()` function, the 
+main 'workhorse' function in the plantTracker R package. `trackSpp()` transforms 
+a data set of annual maps of plant occurrence into a demographic data set. To
 accomplish this, the function compares maps across sampling years and
 assigns unique identifiers ("trackIDs") to plants that overlap from year
 to year. Plants with the same trackID are assumed to be the same
@@ -54,21 +54,12 @@ Workflow](Suggested_plantTracker_Workflow.html), Parts 1.1, 1.2, and 2, as well
 as the "help" file for this function (which you can access by typing `?trackSpp`
 in the R console).  However, I'll include a short description of the 
 arguments here: 
-
-dat, inv, dorm , buff , buffGenet , clonal,
-                     species = "Species",
-                     site = "Site",
-                     quad = "Quad",
-                     year = "Year",
-                     geometry = "geometry",
-                     aggByGenet = TRUE,
-                     printMessages = TRUE
                      
 +--------------+--------------------------------------+---------+--------+
 |`trackSpp()`  | description                          |required?|default?|
 |argument      |                                      |         |        |
 +==============+======================================+=========+========+
-| dat          | An sf data.frame in which each row   |  Yes    |  N/A   |
+| dat          | An sf data frame in which each row   |  Yes    |  N/A   |
 |              | has spatial data for an individual   |         |        |
 |              | observation in one year.             |         |        |
 +--------------+--------------------------------------+---------+--------+
@@ -82,7 +73,7 @@ dat, inv, dorm , buff , buffGenet , clonal,
 | dorm         | A single value greater than or equal |  Yes    |  N/A   |
 |              | to 0 indicating  the number of years |         |        |
 |              | these species are allowed to go      |         |        |
-|              | dormant. **OR** a data.frame with a  |         |        |
+|              | dormant. **OR** a data frame with a  |         |        |
 |              | row for each species in 'dat',       |         |        |
 |              | species names in the "Species" column|         |        |
 |              | and a dormancy value in the          |         |        |
@@ -93,7 +84,7 @@ dat, inv, dorm , buff , buffGenet , clonal,
 |              | far a polygon can move from year `i` |         |        |
 |              | to year `i+1` and still be considered|         |        |
 |              | the same individual. **OR** a        |         |        |
-|              | data.frame with a row for each       |         |        |
+|              | data frame with a row for each       |         |        |
 |              | species present in 'dat', species    |         |        |
 |              | names in the "Species"  column, and a|         |        |
 |              | 'buff' value in the 'buff' column.   |         |        |
@@ -101,7 +92,7 @@ dat, inv, dorm , buff , buffGenet , clonal,
 | clonal       | A logical value (TRUE or FALSE)      |  Yes    |  N/A   |
 |              | indicating whether a species is      |         |        |
 |              | allowed to be clonal or not. **OR**  |         |        |
-|              | a data.frame with a row for each     |         |        |
+|              | a data frame with a row for each     |         |        |
 |              | species in 'dat', species names in   |         |        |
 |              | the "Species" column, and a 'clonal' |         |        |
 |              | value in  the 'clonal' column.       |         |        |
@@ -110,7 +101,7 @@ dat, inv, dorm , buff , buffGenet , clonal,
 |              | to zero indicating how close polygons| only if |        |
 |              | must be to one another in the same   | 'clonal'|        |
 |              | year to be grouped as a genet.       | = TRUE  |        |
-|              | **OR** a data.frame with a row       |         |        |
+|              | **OR** a data frame with a row       |         |        |
 |              | for each species in 'dat', species   |         |        |
 |              | names in the "Species" column, and a |         |        |
 |              | 'buffGenet' value in the 'buffGenet' |         |        |
@@ -155,7 +146,10 @@ dat, inv, dorm , buff , buffGenet , clonal,
 +--------------+--------------------------------------+---------+--------+
 
 Throughout this vignette, we'll use a smaller subset of the `grasslandData` and
-`grasslandInventory` data sets that are included in plantTracker for examples.
+`grasslandInventory` data sets that are included in plantTracker for examples. 
+The susbset of `grasslandData` will be referred to as `dat`, because it is the 
+'dat' argument in `trackSpp()`. The subset of `grasslandInventory` will be 
+referred to as `inv`, since it is used for the 'inv' argument.  
 
 Here are the first few rows of the `dat` data set we'll be using:
 
@@ -204,7 +198,7 @@ single vector of sequential sampling years for the quadrat in question.
 Then `trackSpp()` gets the appropriate 'dorm', 'clonal', 'buff', and
 'buffGenet' arguments for that given species, either by using the
 globally-specified value in the trackSpp() function call, or by extracting
-the species-level value if the argument was given as a data.frame of
+the species-level value if the argument was given as a data frame of
 unique values for each species. Then, the data and arguments are passed
 to the `assign()` function. This function is not exported in plantTracker,
 but the code can be accessed by typing `plantTracker:::assign()` in the
@@ -224,7 +218,7 @@ vector for this quadrat is
 
 The data is subset yet again, this time for only the first year of
 observations for this species in this quadrat, and stored in a
-data.frame called `tempPreviousYear`. In our example, data from 1922
+data frame called `tempPreviousYear`. In our example, data from 1922
 will be stored in this data.frame.
 
 ### *3.2* Group genets together using `groupByGenet`, and assign 'trackID's to each individual in the first year of sampling
@@ -257,9 +251,10 @@ six letter species code, year of first observation, and an arbitrary
 index differentiating individuals of the the same species and year of
 recruitment (e.g. HETCON_1922_3). 
 
-This following figures show data for one year (1922) and one species (*Heteropogon contortus*). 
+This following figures show data for one year (1922) and one species 
+(*Heteropogon contortus*). 
 
-```{r echo = FALSE,  fig.show = 'hold', fig.width=7, fig.align = 'left', fig.cap = "Figure 3.2: The value of 'buffGenet' used in the `trackSpp()` function can make a big difference in genetID assignments. These examples move from no genet grouping on the left, where every polygon has its own genetID, to grouping any ramets together that are less than 10 cm apart on the right. Colors and numbers indicate different genetIDs. Buffers are drawn around ramets that belong to the same genet.", warning=FALSE}
+```{r echo = FALSE,  fig.show = 'hold', fig.width=7, fig.align = 'left', fig.cap = "Figure 3.1: The value of 'buffGenet' used in the `trackSpp()` function can make a big difference in genetID assignments. These examples move from no genet grouping on the left, where every polygon has its own genetID, to grouping any ramets together that are less than 10 cm apart on the right. Colors and numbers indicate different genetIDs. Buffers are drawn around ramets that belong to the same genet.", warning=FALSE}
 
 figDat <- exampleDat[exampleDat$Species == "Heteropogon contortus" & exampleDat$Year == 1922, c("Species", "geometry")]
 
@@ -326,12 +321,12 @@ ggplot(figDat) +
 ### *3.3* Assign age and recruitment data to first year
 
 We can also give all individuals in the first year data in the 'age' and
-'recruit' columns. If the first year for which there is data in `dat` is actually the very first year the quadrat was sampled
-(e.g. there are *Heteropogon contortus* observations in 1922, and the
-quadrat SG2 was first sampled in 1922), then we put an 'NA' in both the
-'age' and 'recruitment' columns. Because there was no data collected in
-the previous year, we don't know if any of these plants are new
-recruits, and don't know their age.
+'recruit' columns. If the first year for which there is data in `dat` is 
+actually the very first year the quadrat was sampled (e.g. there are 
+*Heteropogon contortus* observations in 1922, and the quadrat SG2 was first 
+sampled in 1922), then we put an 'NA' in both the 'age' and 'recruitment' 
+columns. Because there was no data collected in the previous year, we don't know 
+if any of these plants are new recruits, and don't know their age.
 
 If the first year of data in `dat` -- now in `tempPreviousYear`--
 is *after* the first year the quadrat was sampled (e.g. the first
@@ -393,7 +388,7 @@ survival.
 +============================================================+=========+
 | ... greater than the 'dorm' value + 1 (e.g. if 'dorm' = 1, | Go to   |
 | inv[i] = 1923, and inv[i-1] = 1920; 1923 - 1920 \> (1+1)), | step    |
-| then we don't know if the observations in                  |[3.4.10](#3_4_10)|
+| then we don't know if the observations in                  |[3.4.12](#3_4_12)|
 | `tempPreviousYear` survived or grew. They get an 'NA' in   |         |
 | the 'size_tplus1' and 'survives_tplus1' columns .......... |         |
 +------------------------------------------------------------+---------+
@@ -418,7 +413,7 @@ applicable, and assign genetIDs. This data set is stored in the
 
 <a id="3_4_3"></a>
 
-### *3.4.3* Are there actually any observations in the 'current' year (`inv[i-1]`)?  
+### *3.4.3* Are there any observations in the 'previous' year (`inv[i-1]`)?  
 
 Even if a quadrat was sampled in `inv[i-1]`, it is possible that there
 weren't actually any plants there that year.
@@ -432,12 +427,12 @@ weren't actually any plants there that year.
 +-----------------------------------------------------------+----------+
 | ... is *not* data in `tempPreviousYear`......             | Go to    |
 |                                                           | step     |
-|                                                           |[3.4.11](#3_4_11)|
+|                                                           |[3.4.13](#3_4_13)|
 +-----------------------------------------------------------+----------+
 
 <a id="3_4_4"></a>
 
-### *3.4.4* Add a buffer around the 'current' year data  
+### *3.4.4* Add a buffer around the 'previous' year data  
 
 Now a buffer is added around each polygon in `tempPreviousYear`. This
 data is stored in the `tempPreviousBuff` data.frame. This buffer is of
@@ -447,7 +442,7 @@ and current years allows for mapping error and slight movement of plants
 between years, which is especially likely for forbs that resprout every
 year. **Proceed to step [3.4.5](#3_4_5).**
 
-```{r echo = FALSE, warning= FALSE, fig.width=6, fig.align = 'left', fig.cap = "Figure 3.4.4.1: With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the *same* individual and receive the same trackID."}
+```{r echo = FALSE, warning= FALSE, fig.width=6, fig.align = 'left', fig.cap = "Figure 3.2: With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the *same* individual and receive the same trackID."}
 
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" & 
@@ -492,7 +487,8 @@ ggplot(data = exampleDatIDs
   scale_alpha_discrete(range = c(0, 1, .5)) +
   scale_linetype_manual(values=c("twodash", "solid", "dotted"))
 ```
-```{r echo = FALSE, warning= FALSE, fig.width=6, fig.align = 'left', fig.cap = "Figure 3.4.4.2: With a 5 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as *different* individuals and receive different trackIDs."}
+
+```{r echo = FALSE, warning= FALSE, fig.width=6, fig.align = 'left', fig.cap = "Figure 3.3: With a 5 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as *different* individuals and receive different trackIDs."}
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" , ]
 exampleDatIDsTemp <- exampleDat[exampleDat$Species == "Bouteloua rothrockii" & 
@@ -555,7 +551,7 @@ weren't actually any plants there that year.
 +----------------------------------------------+-----------------------+
 | ... is *not* data in `tempCurrentYear`.......| Take the entire       |
 |                                              | `tempPreviousYear`    |
-|                                              | data.frame to step    |
+|                                              | data frame to step    |
 |                                              | [3.4.6](#3_4_6)       |
 +----------------------------------------------+-----------------------+
 
@@ -570,7 +566,7 @@ given a '0' in the 'survives_tplus1' column and an 'NA' in the
 'size_tplus1' column. Because they are not allowed to be dormant, if
 they don't have overlapping individuals in the current year
 (`inv[i]`)--which they don't if they're sent to this step--then they're
-dead. **Take these observations to step [3.4.10](#3_4_10).**
+dead. **Take these observations to step [3.4.12](#3_4_12).**
 
 However, if dormancy *is* allowed for this species, the individuals that
 were 'sent' to this step because they didn't overlap with anything in
@@ -588,9 +584,9 @@ one year. We then call these individuals 'dead ghosts.' Any observations
 that are sent to this step, but that were observed in a year that is
 greater than 1 + 'dorm' years ago, become 'dead ghosts.' The 'dead
 ghosts' are added to the output data.frame. **The 'ghosts' are saved for
-the next step, which is [3.4.11](#3_4_11)**
+the next step, which is **[3.4.13](#3_4_13)**
 
-```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.4.6.1: A visualization of the 'dormancy' scenario described above. The observation in 1922 has no overlap with any observation in 1923 (panels 1 and 2). However, if 'dorm' is greater than or equal to 1, we can save the 1922 observation as a 'ghost' (illustrated with a dotted border in panel 2). When compared to observations in 1924, there is an overlap! If 'dorm' = 1 (or more), then the observation in 1922 will get a '1' in the 'survives_tplus1' column. If 'dorm' = 0, then the observation in 1922 will get a '0' for survival, and the observation in 1924 will be a new recruit. "}
+```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.4: A visualization of the 'dormancy' scenario described above. The observation in 1922 has no overlap with any observation in 1923 (panels 1 and 2). However, if 'dorm' is greater than or equal to 1, we can save the 1922 observation as a 'ghost' (illustrated with a dotted border in panel 2). When compared to observations in 1924, there is an overlap! If 'dorm' = 1 (or more), then the observation in 1922 will get a '1' in the 'survives_tplus1' column. If 'dorm' = 0, then the observation in 1922 will get a '0' for survival, and the observation in 1924 will be a new recruit. "}
 exampleSmall <- exampleDat[exampleDat$Species == "Heteropogon contortus" & exampleDat$Year %in% c(1922, 1923, 1924),]
 
 #117621 (1922); 117735 (1923); 117791 (1924)
@@ -650,22 +646,23 @@ there is any overlap between polygons in the the previous year
 +-----------------------------------------------+----------------------+
 | ... is *not* overlap between                  | Take the             |
 | `tempPreviousYear` and `tempCurrentYear`...   | `tempPreviousYear`   |
-|                                               | data.frame to step   |
+|                                               | data frame to step   |
 |                                               | [3.4.6](#3_4_6).Take the|
 |                                               | `tempCurrentYear`    |
-|                                               | data.frame to step   |
-|                                               | [3.4.11](#3_4_11), but|
+|                                               | data frame to step   |
+|                                               | [3.4.13](#3_4_13), but|
 |                                               | first assign them a  |
 |                                               | '1' in the 'recruit' |
 |                                               | column and a '1' in  |
 |                                               | the 'age' column.    |
 +-----------------------------------------------+----------------------+
 
+
 <a id="3_4_9"></a>
 
 ### *3.4.9* Compare the overlap between `tempPreviousYear` and `tempCurrentYear` to assign trackIDs.
 
-The `st_intersection` function used in step [3.4.8](#3.4.8) returns a matrix
+The `st_intersection` function used in step **[3.4.8](#3_4_8)** returns a matrix
 that gives the total area of overlap between each genet in
 `tempPreviousYear` and each genet in `tempCurrentYear`. Because the
 'parent' polygons (those in `tempPreviousYear`) and the 'child' polygons
@@ -681,7 +678,10 @@ The while loop repeats this process of finding the highest value in the
 matrix to assign trackIDs until the entire matrix has no non-zero values
 left.
 
-```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.4.9.1: Here are the data for *Heteropogon contortus* in 1922 and 1923. A 5 cm buffer is shown around each genet in 1922. Data from both years have been grouped by genet using 'buffGenet' = .01", warning = FALSE}
+Take both the `tempCurrentYear` (child) and `tempPreviousYear` (parent) data 
+frames to step **[3.4.10](#3_4_10)**. 
+
+```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.5: Here are the data for *Heteropogon contortus* in 1922 and 1923. A 5 cm buffer is shown around each genet in 1922. Data from both years have been grouped by genet using 'buffGenet' = .01", warning = FALSE}
 # comparing data from 1922 to 1923 (overlapping), then show actual trackID assignments
 exampleSmall <- exampleDat[exampleDat$Species == "Heteropogon contortus" & exampleDat$Year %in% c(1922, 1923), c("Species", "Year", "geometry")]
 
@@ -737,7 +737,7 @@ ggplot(data = exampleSmall) +
         legend.title = element_blank()) 
 ```
 
-```{r echo = FALSE, fig.width=4.5, fig.align = 'left', fig.cap = "Figure 3.4.9.2: Here are the buffered data for *Heteropogon contortus* from 1922, overlapped with the data from 1923.", warning = FALSE}
+```{r echo = FALSE, fig.width=4.5, fig.align = 'left', fig.cap = "Figure 3.6: Here are the buffered data for *Heteropogon contortus* from 1922, overlapped with the data from 1923.", warning = FALSE}
 ggplot(data = exampleSmall) +
   geom_sf(data = exampleSmall[exampleSmall$buff == "yes",], aes(color = as.factor(Year), fill = as.factor(Year)), alpha = .2, lty = 3) +
   geom_sf(data = exampleSmall[exampleSmall$buff == "no" & exampleSmall$Year == 1923,], aes(color = as.factor(Year), fill = as.factor(Year)), alpha = .7) +
@@ -762,7 +762,7 @@ ggplot(data = exampleSmall) +
         legend.title = element_blank()) 
 ```
 
-```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.4.9.3: Here are the trackID assignments for these two years of data. Each trackID has a different color and a different number.", warning = FALSE}
+```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.7: Here are the trackID assignments for these two years of data. Each trackID has a different color and a different number.", warning = FALSE}
 
 exampleSmall$Site <- "AZs"
 exampleSmall$Quad <- "SG2"
@@ -798,15 +798,67 @@ ggplot(data = exampleOut) +
         legend.title = element_blank()) 
 ```
 
-At this point, the `tempPreviousYear` data.frame gets broken into a
+
+<a id="3_4_10"></a>
+
+### *3.4.10* Flag any suspect observations
+If the 'flagSuspects' argument is set to `FALSE`, proceed directly to 
+step **[3.4.11](#3_4_11)**. 
+If the 'flagSuspects' argument is set to `TRUE`, the following checks take 
+place. The first check identifies and flags any individuals in the previous year 
+that became substantially smaller in the current year. For example, there is are 
+two overlapping observations in consecutive years that the function has given 
+the same trackID. The observation in the previous year has a basal area of 20 
+cm$^2$, and the observation in the current year has a basal area of 1.5 cm$^2$. 
+It is possible that these two are in fact the same individual, but it is also 
+possible that the observation in the current year is a new recruit that happens 
+to be in a similar location to the larger plant in the previous year. If 
+'flagSuspects' = `TRUE`, any individual from the previous year (any 'parent') 
+that has a basal area in the current year below a certain percentage of its size 
+will be get a 'TRUE' in the 'Suspect' column. This threshold is defined by the 
+'shrink' argument, which has a default value of 0.10 (10%). To use our previous 
+example, if 'shrink' = .10, the individual with a basal area of 20 cm$^2$ in the 
+previous year will be flagged as 'suspect' because it has shrunk to below 10% of 
+its size. 
+
+The second check flags very small individuals that go dormant. This check is 
+only used if the 'dorm' argument is set to '1' or higher, and if the 
+observations were measured as polygons. This check can't be used for 
+observations that were measured as points and converted to small polygons of a 
+fixed size, since we don't know the plant's true size. A plant with a very small 
+basal area is unlikely to actually survive dormancy. It is possible that the 
+tracking function has correctly given the same trackID to a very small 
+individual that is present in year 1, absent in year 2, and present again in 
+year 3. However, it is also very possible that this very small individual died, 
+and the observation in year 3 is a new recruit. This check puts a `TRUE` in the 
+'suspect' column of any 'parent' individual that 'survives' dormancy if it is 
+below a certain percentile of the size distribution for that species (which is 
+created using the size data for that species provided in `dat`). The percentile 
+threshold is defined by the 'dormSize' argument, which has a default value 
+of 0.05 (5%).
+
+Once these checks are complete, the `tempCurrentYear` (child) and 
+`tempPreviousYear` (parent) data frames go to step **[3.4.11](#3_4_11)**. 
+
+It is important to note that, even though these checks flag individuals whose 
+trackID assignment might be 'suspect', the trackSpp() function still proceeds as 
+it would if 'flagSuspects' was set to `FALSE`. It is up to the user whether they 
+want to exclude 'suspect' observations from subsequent analyses. If you do not 
+exclude these observations, it is possible that you would slightly overestimate 
+survival, and underestimate recruitment and growth.
+
+<a id="3_4_11"></a>
+
+### *3.4.11* Separate the 'ghosts' and the new recruits from the parent and child data frames 
+At this point, the `tempPreviousYear` data frame gets broken into a
 `parents` data.frame, which contains data for all those genets that have
 a 'child' in the current year, and a `ghosts` data.frame, which contains
 data for those genets that do not have a 'child.' The `tempCurrentYear`
-data.frame is broken into a `children` data.frame, containing the data
+data frame is broken into a `children` data.frame, containing the data
 for all those genets that have a 'parent' in the previous year, and an
 `orphans` data.frame, which contains the data for genets that do not
 have a parent.
-```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.4.9.4: Here is a visualization of how the observations are broken into 'parents', 'ghosts', 'children', and 'orphans'.", warning = FALSE}
+```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 3.8: Here is a visualization of how the observations are broken into 'parents', 'ghosts', 'children', and 'orphans'.", warning = FALSE}
 # break d.f into parents, ghosts, children, and orphans
 exampleOut$status <- NA
 exampleOut[exampleOut$Year == 1922 & 
@@ -843,35 +895,36 @@ ggplot(data = exampleOut) +
 ```
 
 
-**The `ghosts` data.frame is sent to step [3.4.6.](#3_4_6)** All of the
-observations in the `parents` data.frame get a '1' in the
+**The `ghosts` data frame is sent to step [3.4.6.](#3_4_6)** All of the
+observations in the `parents` data frame get a '1' in the
 'survives_tplus1' column, and the total genet area of their 'child' is
-put into the 'size_tplus1' column. Then, **the `parents` data.frame is
-sent to step [3.4.10](#3_4_10)** All of the observations in the `children`
-data.frame get a '0' in the 'recruit' column, the age column is
+put into the 'size_tplus1' column. Then, **the `parents` data frame is
+sent to step **[3.4.12](#3_4_12)** All of the observations in the `children`
+data frame get a '0' in the 'recruit' column, the age column is
 populated with 1 + the age of their parent. The observations in the
-`orphans` data.frame get a '1' in the 'recruit' column and a '1' in the
+`orphans` data frame get a '1' in the 'recruit' column and a '1' in the
 'age' column. However if the `orphans` occur after a gap in sampling, they
 instead get an 'NA' in the 'recruit' and 'age' columns, since we don't know
 whether they were recruited in year *i* or during the gap. Then, **both the**
-**`children` and `orphans` data.frames are sent to step [3.4.11](#3_4_11).**
+**`children` and `orphans` data.frames are sent to step [3.4.13](#3_4_13).**
 
-<a id="3_4_10"></a>
 
-### *3.4.10* Store the resulting demographic data 
+<a id="3_4_12"></a>
+
+### *3.4.12* Store the resulting demographic data 
 
 Now demographic data (or NAs, if appropriate) and trackIDs have been
 assigned to every individual in `tempPreviousYear` (if there are
 actually observations in `inv[i-1]`), we can save these results. They
-are added to a data.frame that, when the for loop finishes, will be
+are added to a data frame that, when the for loop finishes, will be
 returned by the `assign()` function. If there are any 'dead ghosts', they
 are also added to the output data.frame. If `inv[i]` is *not* the last
-year of sampling, then proceed to step [3.4.11](#3_4_11). If `inv[i]` *is* the
-last year of sampling, then the for loop is over!
+year of sampling, then proceed to step **[3.4.13](#3_4_13)**. If `inv[i]` *is* 
+the last year of sampling, then the for loop is over!
 
-<a id="3_4_11"></a>
+<a id="3_4_13"></a>
 
-### *3.4.11* Get ready for the next iteration of the loop  
+### *3.4.13* Get ready for the next iteration of the loop  
 
 If there are still iterations of the loop left, that is if `inv[i]` is
 not the last year of `inv`, then the data from year[i] (stored either in
@@ -881,31 +934,74 @@ happens even if `tempCurrentYear` is empty. If there are not already
 genetIDs assigned to the data from `inv[i]` in `tempCurrentYear` (which
 happens if this is the first year after a gap in sampling), then it is
 passed through `ifClonal()`. The loop proceeds to the next value of *i*
-(start again at section [3.4.1](#3_4_1)).
+(start again at section **[3.4.1](#3_4_1)**).
 
 Once the loop has progressed through the 'last' year, then the output
 data set will be saved, and the next species in the data set will be
 sent to `assign()`!
 
 ## *4.* Preparing the `trackSpp()` results to be returned!
-There are just a few more steps in `trackSpp()` after the `assign()` function has been applied to every species present in the data set. 
+There are just a few more steps in `trackSpp()` after the `assign()` function 
+has been applied to every species present in the data set. 
 
 ### *4.1* Aggregating the results by genet
-The data.frames returned by the `assign()` function are the exact same length as the input data frames. This means that, even though trackIDs and demographic data are assigned on the genet level, each 'observation', or ramet, has its own row of data. If the `trackSpp()` argument 'aggByGenet' = TRUE, the output data set is passed through the `aggregateByGenet` function from plantTracker. This aggregates the data set so that each genet in each year is represented by only one row of data. The polygons for each ramet are combined into one spatial object using the `st_union` function from the 'sf' package. The resulting data.frame will be shorter and narrower than the input data.frame, since rows are combined. 
-While the output of the `assign()` function contains a column for 'basalArea_ramet', this column is no longer present once the results are aggregated. 
+The data.frames returned by the `assign()` function are the exact same length as 
+the input data frames. This means that, even though trackIDs and demographic 
+data are assigned on the genet level, each 'observation', or ramet, has its own 
+row of data. If the `trackSpp()` argument 'aggByGenet' = TRUE, the output data 
+set is passed through the `aggregateByGenet` function from plantTracker. This 
+aggregates the data set so that each genet in each year is represented by only 
+one row of data. The polygons for each ramet are combined into one spatial 
+object using the `st_union` function from the 'sf' package. The resulting data 
+frame will be shorter and narrower than the input data.frame, since rows are 
+combined. While the output of the `assign()` function contains a column for 
+'basalArea_ramet', this column is no longer present once the results 
+are aggregated. 
 
-If there were any columns in the input data.frame beyond those required (Species, Site, Quad, Year, geometry), these will be dropped also, since the function can't predict whether it will be possible to aggregate those on the genet level. If your input data.frame has data in additional columns that can be aggregated and that you want to keep with the demographic data, I recommend using 'aggByGenet' = FALSE. If you want to ultimately aggregate the demographic data by genet, you can use the `sf::aggregate` function on your own, or modify the code for the `aggregateByGenet` function to include your additional columns. If you have set 'clonal' = FALSE for all species in your input data.frame, I also recommend using 'aggByGenet' = FALSE, since your results will already be on the genet scale! 
+If there were any columns in the input data frame beyond those required 
+(Species, Site, Quad, Year, geometry), these will be dropped also, since the 
+function can't predict whether it will be possible to aggregate those on the 
+genet level. If your input data frame has data in additional columns that can be 
+aggregated and that you want to keep with the demographic data, I recommend 
+using 'aggByGenet' = FALSE. If you want to ultimately aggregate the demographic 
+data by genet, you can use the `sf::aggregate` function on your own, or modify 
+the code for the `aggregateByGenet` function to include your additional columns. 
+If you have set 'clonal' = FALSE for all species in your input data.frame, I 
+also recommend using 'aggByGenet' = FALSE, since your results will already be on 
+the genet scale! 
 
 ### *4.2* Informative messages
-If the argument 'printMessages' = TRUE, one or two messages will be printed as each species goes through the `assign()` function. These messages are not warnings or errors! Unless the function returns a message preceded by the word "warning" or "error", the function is working! The messages I'm talking about here provide information about why there are 'NA's present in the demographic results, which may be concerning if you aren't expecting them. The first message tells you which year is the last year of sampling for this quadrat. Observations in the last year of sampling will have an 'NA' in both the 'survives_tplus1' and 'size_tplus' columns because we have no data to determine whether they survived. The second message only appears if there is a gap in sampling for that quadrat that exceeds the 'dorm' argument. The message indicates that observations in the year(s) preceding that gap will have 'NA's in the 'survives_tplus1' 'size_tplus1' columns, since we don't know when they died. If both 'printMessages' = TRUE and 'aggByGenet' = TRUE, an additional message will be printed. This message will warn that the output data.frame is shorter and narrower than the input data.frame, and will explain why that is. 
+If the argument 'printMessages' = TRUE, one or two messages will be printed as 
+each species goes through the `assign()` function. These messages are not 
+warnings or errors! Unless the function returns a message preceded by the word 
+"warning" or "error", the function is working! The messages I'm talking about 
+here provide information about why there are 'NA's present in the demographic 
+results, which may be concerning if you aren't expecting them. The first message 
+tells you which year is the last year of sampling for this quadrat. Observations 
+in the last year of sampling will have an 'NA' in both the 'survives_tplus1' and 
+'size_tplus' columns because we have no data to determine whether they survived. 
+The second message only appears if there is a gap in sampling for that quadrat 
+that exceeds the 'dorm' argument. The message indicates that observations in the 
+year(s) preceding that gap will have 'NA's in the 'survives_tplus1' 
+'size_tplus1' columns, since we don't know when they died. If both 
+'printMessages' = TRUE and 'aggByGenet' = TRUE, an additional message will be 
+printed. This message will warn that the output data frame is shorter and 
+narrower than the input data.frame, and will explain why that is. 
 
-Lastly, if 'printMessages' = TRUE, the `trackSpp()` function will print progress messages that indicate which site is being run the function, then which species, then which quadrat. This is helpful both to know how far the function has gotten in your data, and also is helpful if the function errors out. You can find roughly where the problem in the data is, since you know the species, quadrat, and site where the function crashed. 
-
+Lastly, if 'printMessages' = TRUE, the `trackSpp()` function will print progress 
+messages that indicate which site is being run the function, then which species, 
+then which quadrat. This is helpful both to know how far the function has gotten 
+in your data, and also is helpful if the function errors out. You can find 
+roughly where the problem in the data is, since you know the species, quadrat, 
+and site where the function crashed. 
 
 If 'printMessages' = FALSE, then no messages will be returned. 
 
-## *5.* Examples!
-Here are the trackID assignments for 4 years of observations of *Heteropogon contortus* from a subset of the SG2 quadrat near Tucson, Arizona. The `trackSpp` function here uses 'dorm' = 1, clonal = TRUE, buff = 0.05 and buffGenet = 0.01.  
+## *5.* Examples
+Here are the trackID assignments for 4 years of observations of 
+*Heteropogon contortus* from a subset of the SG2 quadrat near Tucson, Arizona. 
+The `trackSpp` function here uses 'dorm' = 1, clonal = TRUE, buff = 0.05 and 
+buffGenet = 0.01.  
 ```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 5.1: Here are the trackID assignments over 4 years of data. Each trackID is shown as a different color and has a different number.", warning = FALSE}
 exampleSmall <- exampleDat[exampleDat$Species == "Heteropogon contortus" &
                            exampleDat$Year %in% c(1922:1925),]
@@ -951,7 +1047,8 @@ ggplot(data = exampleOut) +
         legend.title = element_blank()) 
 ```
 
-Here is that same data subset, but run through `trackSpp()` using a buffGenet value of .05
+Here is that same data subset, but run through `trackSpp()` using a buffGenet 
+value of .05
 ```{r echo = FALSE, fig.width=7, fig.align = 'left', fig.cap = "Figure 5.2: Here are the trackID assignments over 4 years of data. Each trackID is shown as a different color and has a different number.", warning = FALSE}
 ## get trackIDs 
 exampleOut <- suppressMessages(PlantTracker::trackSpp(dat = exampleSmall, inv = list("SG2" = c(1922:1925)), buff = .05, clonal = TRUE, dorm = 1, buffGenet = .05, aggByGenet = TRUE, printMessages = FALSE))
